--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -2,8 +2,8 @@
   <mat-sidenav-container class="example-container" >
 
       <mat-sidenav #sidenav mode = "side" class="sidenav">
-          <mat-toolbar>
-              Settings
+          <mat-toolbar class="bgcolor">
+
             </mat-toolbar>
           <button mat-button>Login/Signup</button><br>
           <button mat-button>Politics</button><br>
